tests/tooling/fixtures/native/recovery/negative/negative_switch_conditional_case_break_path_conservative_reject.objc3
// Negative fixture: conditional case bodies with break escape paths remain conservative in switch return-path analysis.
// Expected diagnostic code(s): O3S205.
module NegativeSwitchConditionalCaseBreakPathConservativeReject;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      if (value == 0) {
        break;
      }
    case 2:
      return 42;
    default:
      return 9;
  }
}
